# examen-dvc

./: .gitignore  dvc.yaml  params.yaml  pyproject.toml  setup_pipeline.sh
.dvc/: config
configs/: gridsearch_elasticnet.json  gridsearch_elasticnet.yaml  gridsearch_gbrt.json  gridsearch_gbrt.yaml  gridsearch_lasso.json  gridsearch_lasso.yaml  gridsearch_lightgbm.json  gridsearch_lightgbm.yaml  gridsearch_rf.json  gridsearch_rf.yaml  gridsearch_ridge.json  gridsearch_ridge.yaml
data/: predictions.csv
data/raw_data/: .gitignore
models/: elasticnet-best-params.pkl  gbrt-best-params.pkl  lasso-best-params.pkl  lightgbm-best-params.pkl  lightgbm.pkl  random_forest-best-params.pkl  ridge-best-params.pkl  scaler.joblib
src/: __init__.py  constants.py
src/data/: data_split.py  normalize.py  prepare.py
src/models/: evaluate.py  girdsearch.py  grid_search.py  gridsearch.py  loaders.py  registry.py  train.py  training.py
